Fixed layout issues
Fixed scroll down button layout. Fixed some layout issues with the slider

--- a/style_sheets/style_sheet.css
+++ b/style_sheets/style_sheet.css
@@ -19,7 +19,7 @@ body {
 	width: 100px;
 	height: 100px;
 	margin: auto;
-	padding-top: 10px;
+	padding-top: 2px;
 	float: center;
 }
 #figure_logo img {
@@ -29,7 +29,7 @@ body {
 }
 #h1_header{
 	font-family: consola;
-	font-size: 40px;
+	font-size: 35px;
 	font-weight: normal;
 }
 
